--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "astro": "astro",
     "dev:kv": "wrangler pages dev functions/ --compatibility-date=2023-02-02 --kv=comments_db",
     "pages:dev": "wrangler pages dev --compatibility-date=2023-09-13 --kv=comments_db --persist-to .wrangler/state --proxy 3000 -- astro dev ",
-    "pages:deploy": "astro build && wrangler pages deploy ./dist"
+    "pages:deploy": "astro build && wrangler pages deployment create ./dist"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^6.1.1",
